# FinancialSimulation

./: .gitignore  LICENSE  README.md  check_market_trend.py  daily_check.py  main.py  pyproject.toml  requirements.txt  run_test.sh  test_look_ahead_fix.py  test_realism.py  todo.txt
strategies/: aapl_dividend_growth.py  aapl_dividend_strategy.py  aapl_hybrid_draft.py  aapl_macro_fmh.py  aapl_peg_strategy.py  aapl_sniper.py  aapl_strategy_draft.py  aapl_ultimate_strategy.py  ashare_dragon_strategy.py  crypto_draft.py  moutai_dividend_strategy.py  moutai_strategy.py  moutai_valuation_strategy.py  strategies.py  tech_trinity_strategy.py  tech_trinity_v1_static.py  tech_trinity_v2_momentum.py  tencent_volume_strategy.py
test/: reproduce_issue.py  run_portfolio_v1.py  test_aapl_div_growth.py  test_aapl_dividend.py  test_aapl_macro.py  test_aapl_macro_v3.py  test_aapl_peg.py  test_aapl_sniper.py  test_aapl_sniper_hybrid.py  test_aapl_ultimate.py  test_data_loader.py  test_googl_ultimate.py  test_hurst_window.py  test_moutai.py  test_moutai_dividend.py  test_moutai_valuation.py  test_moutai_vol.py  test_msft_ultimate.py  test_realism.py  test_spy_macro.py  test_super_six.py  test_tech_trinity.py  test_tencent_vol.py
utility/: __init__.py  data_source.py  economic_util.py  math_util.py  notifier.py  range_scaled_analysis.py  simulation_kernel.py  stock_analysis.py  stock_util.py  strategy.py
