[project]
name = "financialsimulation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "akshare>=1.18.8",
    "ipython==8.11.0",
    "matplotlib==3.7.0",
    "numba==0.62.1",
    "numpy==2.3.4",
    "pandas==2.3.3",
    "requests==2.32.5",
    "scipy==1.16.3",
    "yahooquery==2.4.1",
    "yfinance>=1.0",
]
